# Likan

./: CMakeLists.txt  README.md  README.org
.cache/clangd/index/: main.cpp.073D9E0BCB8C0BB5.idx
src/: main.cpp  main.h  mainFrame.cpp  mainFrame.h  menubar.h  recursos.rc  resources.rc
